# multicloud-curator

./: .gitignore  README.md
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_oauth_states.py  0003_scan_metadata.py  0004_large_stale_results.py  0005_provider_location_open_url.py
backend/app/: config.py  database.py  logging_config.py  main.py
backend/app/adapters/: base.py  dropbox.py  factory.py  google_drive.py
backend/app/features/accounts/: models.py  repository.py  routes.py  schemas.py  service.py
backend/app/features/async_operations/: models.py  repository.py  routes.py  schemas.py  service.py
backend/app/features/duplicates/: models.py  repository.py  routes.py  schemas.py  service.py
backend/app/features/files_visibility/: models.py  repository.py  routes.py  schemas.py  service.py
backend/app/features/keywords/: models.py  repository.py  routes.py  schemas.py  service.py
backend/app/features/large_stale/: __init__.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/features/scan_metadata/: models.py  repository.py  schemas.py
backend/app/features/security/: models.py  repository.py  routes.py  (+2 more)
backend/app/shared/: api_envelope.py  audit_log_model.py  encryption.py  exceptions.py  types.py
backend/tests/: conftest.py
backend/tests/test_features/: test_accounts.py  test_async_operations.py  test_duplicates.py  test_files_visibility.py  test_keywords.py  test_large_stale.py  test_security.py
(+109 files in other folders)
